--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -29,5 +29,6 @@
     <p>Welcome to the visualization dashboard. You can access various visualizations and data analysis tools from here.</p>
     <a href="{{ url_for('graph') }}">Go to Graph Page</a>
     <a href="{{ url_for('hidden_patterns') }}">View Hidden Patterns</a>
+    <a href="{{ url_for('counter_page') }}">View Keyword Counter</a>
 </body>
 </html>
