--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -30,6 +30,7 @@
     <a href="{{ url_for('graph') }}">Go to Graph Page</a>
     <a href="{{ url_for('hidden_patterns') }}">View Hidden Patterns</a>
     <a href="{{ url_for('counter_page') }}">View Keyword Counter</a>
-    <a href="{{ url_for('video') }}">View Video Categories</a> <!-- Added Link -->
+    <a href="{{ url_for('video') }}">View Video Categories</a> 
+    <a href="{{ url_for('aggregation') }}">MongoDB aggregations</a> 
 </body>
 </html>
