add second  10 aggregations in task2

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -32,5 +32,6 @@
     <a href="{{ url_for('counter_page') }}">View Keyword Counter</a>
     <a href="{{ url_for('video') }}">View Video Categories</a> 
     <a href="{{ url_for('aggregation') }}">MongoDB aggregations</a> 
+    <a href="{{ url_for('aggregation2') }}">MongoDB aggregations2</a> 
 </body>
 </html>
