add third  10 aggregations in task2 and fix readme

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -33,5 +33,8 @@
     <a href="{{ url_for('video') }}">View Video Categories</a> 
     <a href="{{ url_for('aggregation') }}">MongoDB aggregations</a> 
     <a href="{{ url_for('aggregation2') }}">MongoDB aggregations2</a> 
+
+    <a href="{{ url_for('aggregation3') }}">MongoDB aggregations3</a> 
+    <a href="{{ url_for('aggregation4') }}">MongoDB aggregations4</a> 
 </body>
 </html>
